tests/sksl/errors/FunctionParameterOfVoid.glsl
### Compilation failed:

error: 1: expected ')', but found 'x'
void func(void x) {}
               ^
1 error
